[gd_scene load_steps=4 format=3 uid="uid://bqujrdkjjrbu6"]

[ext_resource type="Texture2D" uid="uid://bvppqnu84gwcm" path="res://assets/00 - User Interface/02 - Buttons/00 - Placeholders/16.png" id="1_nfssq"]
[ext_resource type="Script" uid="uid://bixfu5mplw0xc" path="res://source/02 - User Interface/00 - Tool Menu/00 - Build Menu/00 - Icons_Buildings/Button_BuildingIcon.gd" id="2_fna6s"]
[ext_resource type="PackedScene" uid="uid://xxysto50vjtq" path="res://source/04 - Objects/00 - Buildings/00 - Templates/Building_Template.tscn" id="3_r3mfb"]

[node name="Button_Template" type="TextureButton"]
texture_normal = ExtResource("1_nfssq")
script = ExtResource("2_fna6s")
building = ExtResource("3_r3mfb")
is_unlocked = true
dimensions = {
"16x16": true,
"16x32": false,
"16x48": false,
"32x16": false,
"32x32": false,
"32x48": false,
"48x16": false,
"48x32": false,
"48x48": false
}

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
